--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a.active {
+    font-weight: 700;
+}
+
+body {
+    background-color: #0e151b;
+}
+
+.article {
+    margin-top: 58px;
+}
+
+p {
+    padding-bottom: 20px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+h1 {
+    font-weight: 700;
+    font-size: 30px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 28px;
+}
+
+h3 {
+    font-weight: 700;
+    font-size: 22px;
+}
+
 .App {
-  text-align: center;
+    display: grid;
+    grid-template-areas:
+            "sidebar header"
+            "sidebar content";
+    grid-auto-columns: 350px auto;
+    grid-template-rows: 110px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-admin {
+    display: grid;
+    grid-template-areas:"sidebar content";
+    grid-auto-columns: 350px auto;
+    grid-template-rows: 110px auto;
 }
