--- a/src/App.css
+++ b/src/App.css
@@ -31,20 +31,20 @@ p {
 }
 
 h1 {
-    font-weight: 700;
-    font-size: 30px;
-    margin-top: 20px;
-    padding-bottom: 20px;
+    font-weight: 700 !important;
+    font-size: 30px !important;
+    margin-top: 20px !important;
+    padding-bottom: 20px !important;
 }
 
 h2 {
-    font-weight: 700;
-    font-size: 28px;
+    font-weight: 700 !important;
+    font-size: 28px !important;
 }
 
 h3 {
-    font-weight: 700;
-    font-size: 22px;
+    font-weight: 700 !important;
+    font-size: 22px !important;
 }
 
 .App {
@@ -59,6 +59,29 @@ h3 {
 .App-admin {
     display: grid;
     grid-template-areas:"sidebar content";
-    grid-auto-columns: 350px auto;
-    grid-template-rows: 110px auto;
+    grid-template-columns: 300px auto;
+}
+
+select {
+    background-color: #3D3E4A;
+    color: #A7A7A7;
+    padding: 11px 17px;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+}
+
+select option {
+    font-size: 16px;
+    padding: 11px 17px;
+}
+
+.ql-picker-options {
+    background-color: #1f2d3d !important;
+}
+
+.ql-syntax {
+    background-color: #212B45 !important;
+    font-size: 16px !important;
 }
