--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,87 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
-    color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 a.active {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 body {
-    background-color: #0e151b;
+  background-color: #0e151b;
 }
 
 .article {
-    margin-top: 58px;
+  margin-top: 58px;
 }
 
 p {
-    padding-bottom: 20px;
-    font-size: 18px;
-    font-weight: 400;
+  padding-bottom: 20px;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 h1 {
-    font-weight: 700 !important;
-    font-size: 30px !important;
-    margin-top: 20px !important;
-    padding-bottom: 20px !important;
+  font-weight: 700 !important;
+  font-size: 30px !important;
+  margin-top: 20px !important;
+  padding-bottom: 20px !important;
 }
 
 h2 {
-    font-weight: 700 !important;
-    font-size: 28px !important;
+  font-weight: 700 !important;
+  font-size: 28px !important;
 }
 
 h3 {
-    font-weight: 700 !important;
-    font-size: 22px !important;
+  font-weight: 700 !important;
+  font-size: 22px !important;
 }
 
 .App {
-    display: grid;
-    grid-template-areas:
-            "sidebar header"
-            "sidebar content";
-    grid-auto-columns: 350px auto;
-    grid-template-rows: 110px auto;
+  display: grid;
+  grid-template-areas:
+    "sidebar content"
+    "sidebar content";
+  grid-auto-columns: 350px auto;
+  grid-template-rows: 110px auto;
 }
 
 .App-admin {
-    display: grid;
-    grid-template-areas:"sidebar content";
-    grid-template-columns: 300px auto;
-}
-
-select {
-    background-color: #3D3E4A;
-    color: #A7A7A7;
-    padding: 11px 17px;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    font-size: 16px;
+  display: grid;
+  grid-template-areas: "sidebar content";
+  grid-template-columns: 300px auto;
 }
 
 select option {
-    font-size: 16px;
-    padding: 11px 17px;
+  font-size: 16px;
+  padding: 11px 17px;
 }
 
-.ql-picker-options {
-    background-color: #1f2d3d !important;
+.ql-editor { 
+  color: white
 }
 
-.ql-syntax {
-    background-color: #212B45 !important;
-    font-size: 16px !important;
+textarea {
+  resize: vertical;
+  background: none;
+  border: 1px solid #acadbc;
+  border-radius: 6px;
+  outline: none;
+  font-size: 16px;
+  color: white;
+  padding: 15px 25px;
+  min-height: 200px;
+}
+
+.article {
+  color: white
 }
