--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,87 +1,89 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@font-face {
+    font-family: "Inter";
+    src: url("./assets/fonts/Inter-VariableFont_slnt,wght.ttf") format("truetype");
+}
 
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Inter", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Inter", sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 a.active {
-  font-weight: 700;
+    font-weight: 700;
 }
 
 body {
-  background-color: #0e151b;
+    background-color: #0e151b;
 }
 
 .article {
-  margin-top: 58px;
+    margin-top: 58px;
 }
 
 p {
-  padding-bottom: 20px;
-  font-size: 18px;
-  font-weight: 400;
+    padding-bottom: 20px;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 h1 {
-  font-weight: 700 !important;
-  font-size: 30px !important;
-  margin-top: 20px !important;
-  padding-bottom: 20px !important;
+    font-weight: 700 !important;
+    font-size: 30px !important;
+    margin-top: 20px !important;
+    padding-bottom: 20px !important;
 }
 
 h2 {
-  font-weight: 700 !important;
-  font-size: 28px !important;
+    font-weight: 700 !important;
+    font-size: 28px !important;
 }
 
 h3 {
-  font-weight: 700 !important;
-  font-size: 22px !important;
+    font-weight: 700 !important;
+    font-size: 22px !important;
 }
 
-.App {
-  display: grid;
-  grid-template-areas:
-    "sidebar content"
-    "sidebar content";
-  grid-auto-columns: 350px auto;
-  grid-template-rows: 110px auto;
+.header {
+    display: none;
 }
 
-.App-admin {
-  display: grid;
-  grid-template-areas: "sidebar content";
-  grid-template-columns: 300px auto;
+.content_active {
+    overflow-y: hidden;
+}
+
+@media (max-width: 450px) {
+    .search {
+        width: 150px !important;
+    }
 }
 
 select option {
-  font-size: 16px;
-  padding: 11px 17px;
+    font-size: 16px;
+    padding: 11px 17px;
 }
 
-.ql-editor { 
-  color: white
+.ql-editor {
+    color: white
 }
 
 textarea {
-  resize: vertical;
-  background: none;
-  border: 1px solid #acadbc;
-  border-radius: 6px;
-  outline: none;
-  font-size: 16px;
-  color: white;
-  padding: 15px 25px;
-  min-height: 200px;
+    resize: vertical;
+    background: none;
+    border: 1px solid #acadbc;
+    border-radius: 6px;
+    outline: none;
+    font-size: 16px;
+    color: white;
+    padding: 15px 25px;
+    min-height: 200px;
 }
 
 .article {
-  color: white
+    color: white
 }
